# mqttaudio

./: Chatbot.py  Constants.py  Makefile  Settings.py  bridge.py  chatio.py  code_review.md  globals.py  guestpi.json  gvars.py  launch.sh  main.py  mqttaudio.service  mqttaudio.sh  nopi.toml  pi4.json  pi5-bigboy.json  pi5.json  pyproject.toml  requirements.txt  speechio.py  test.json  test.py  test.sh  trumpy.json  trumpy4.json  trumpyb.json  update.sh
lib/: Audio.py  Chatbot.py  Constants.py  Settings.py
prompts/: pi5-deepseek.prompt
tests/: mic-list.py
